# love_me_tender

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.py
